@@ -36,6 +36,7 @@ Reference
    wrappers
    routing
    wsgi
+   filesystem
    http
    datastructures
    utils
